--- a/style.css
+++ b/style.css
@@ -1,11 +1,55 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
   
     display: flex;
     flex-flow: column;
-  }
+    align-items: stretch;
+    justify-content: space-between;
+    flex: 1;
+}
 
 
-  
+.header {
+    height: 50px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex: 0 0 auto;
+}
+
+.links {
+    display: flex;
+}
+
+.main {
+    flex: 1;
+}
+
+.one {
+    background-color: #1F2937;
+
+}
+
+.two {
+    display: flex;
+}
+
+.three {
+    background-color: #E5E7EB;
+
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
