--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 .header {
     height: 50px;
     background-color: #1F2937;
-    color: #F9FAF8;
     
     display: flex;
     align-items: center;
@@ -22,8 +21,16 @@ body {
     flex: 0 0 auto;
 }
 
+.title {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 800;
+}
+
 .links {
     display: flex;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .main {
@@ -46,7 +53,8 @@ body {
 
 .footer {
     background-color: #1F2937;
-    color: #F9FAF8;
+    color: #E5E7EB;
+    font-size: 18px;
     height: 50px;
 
     display: flex;
