--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     align-items: stretch;
     justify-content: space-between;
     flex: 1;
+    
 }
 
 
@@ -17,8 +18,7 @@ body {
     
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    flex: 0 0 auto;
+    justify-content: space-between;
 }
 
 .title {
@@ -31,19 +31,37 @@ body {
     display: flex;
     color: #E5E7EB;
     font-size: 18px;
+    gap: 20px;
 }
 
 .main {
+    display: flex;
     flex: 1;
+    flex-flow: column;
+    
+    padding: 20px 20%;
 }
 
 .one {
     background-color: #1F2937;
+    gap: 100px;
+    padding: 20px 15%;
+}
 
+.hero {
+    color: #F9FAF8;
+    font-weight: 900;
+    font-size: 48px;
+}
+
+.subtext {
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .two {
     display: flex;
+    
 }
 
 .three {
