--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 
 .horizontal {
     display: flex;
+    gap: 50px;
 }
 
 
@@ -96,4 +97,46 @@ body {
     justify-content: center;
 
     flex: 0 0 auto;
+}
+
+.solid {
+    background-color: #3882F6;
+    border-radius: 5px;
+    border: 0;
+    height: 30px;
+    width: 100px;
+
+    color: #F9FAF8;
+    font-weight: bolder;
+}
+
+.left {
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+}
+
+.box {
+    border-radius: 20px;
+    border: 3px;
+    border-color: #3882F6;
+    width: 100px;
+    height: 100px;
+    border-style: solid;
+}
+
+.boxes {
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.box-title {
+    font: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+
+    display: flex;
+    justify-content: center;
 }
